# trim

./: Cargo.toml  README.md  run.sh  rustfmt.toml
src/: clargs.rs  main.rs  prelude.rs  trim.rs  util.rs
