[package]
name = "trim"
version = "2.0.0"
authors = ["Jack <jackwchoi@pm.me>"]
edition = "2018"
description = "trim whitespaces from files"
repository = "https://github.com/jchoi5me/trim"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.11"
colmac = "0.1.1"
rayon = "1.1"
structopt = "0.2"
